@@ -82,6 +82,7 @@ Summary of important user-visible changes for version 5.0 (yyyy-mm-dd):
       isstr                | ischar
       setstr               | char
       strmatch             | strncmp or strcmp
+      strread              | textscan
 
  ** Deprecated functions.
 
